ui/components/app/account-menu/index.scss
.account-menu {
  position: absolute;
  z-index: 100;
  top: 58px;
  width: 320px;
  border-radius: 4px;
  background: rgba($black, 0.8);
  box-shadow: rgba($black, 0.15) 0 2px 2px 2px;
  min-width: 150px;
  color: var(--white);

  @media screen and (max-width: $break-small) {
    right: 16px;
  }

  @media screen and (min-width: $break-large) {
    right: calc((100vw - 85vw) / 2);
  }

  @media screen and (min-width: 769px) {
    right: calc((100vw - 80vw) / 2);
  }

  @media screen and (min-width: 1281px) {
    right: calc((100vw - 65vw) / 2);
  }

  &__item {
    padding: 18px;
    display: flex;
    flex-flow: row wrap;
    align-items: center;
    position: relative;
    z-index: 201;

    @media screen and (max-width: $break-small) {
      padding: 14px;
      height: 54px;
    }

    &--clickable {
      cursor: pointer;

      &:hover {
        background-color: rgba($white, 0.05);
      }

      &:active {
        background-color: rgba($white, 0.1);
      }
    }

    &__icon {
      height: 16px;
      width: 16px;
      margin-right: 14px;
    }

    &__text {
      @include Paragraph;
    }

    &__subtext {
      @include H7;

      padding: 5px 0 0 30px;
    }
  }

  &__divider {
    background-color: var(--scorpion);
    width: 100%;
    height: 1px;
  }

  &__close-area {
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    z-index: 100;
  }

  &__icon {
    margin-left: 1rem;
    cursor: pointer;

    &--disabled {
      cursor: initial;
    }
  }

  &__header {
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    align-items: center;
  }

  & &__lock-button {
    @include H7;

    border: 1px solid var(--ui-white);
    background-color: transparent;
    padding: 3.5px 5px;
    color: var(--white);
    width: 59px;

    &:hover {
      background-color: rgba($dusty-gray, 0.05);
    }

    &:active {
      background-color: rgba($dusty-gray, 0.1);
    }
  }

  &__item-icon {
    width: 16px;
    height: 16px;
  }

  &__accounts-container {
    display: flex;
    position: relative;
    flex-direction: column;
    z-index: 200;

    @media (max-height: 600px) {
      max-height: 236px;
    }
  }

  &__accounts {
    overflow-y: auto;
    position: relative;
    max-height: 256px;
    scrollbar-width: auto;

    @media screen and (max-width: $break-small) {
      max-height: 228px;
    }

    .keyring-label {
      @include H9;

      z-index: 1;
      border-radius: 10px;
      padding: 4px;
      text-align: center;
      height: 15px;
      margin-top: 5px;
      margin-right: 10px;
      background-color: var(--dusty-gray);
      color: var(--black);
      font-weight: normal;
      letter-spacing: 0.5px;
      display: flex;
      align-items: center;
    }
  }

  &__no-accounts {
    @include H6;

    padding: 16px 14px;
  }

  &__account {
    display: flex;
    flex-flow: row nowrap;
    padding: 16px 14px;
    flex: 0 0 auto;

    @media screen and (max-width: $break-small) {
      padding: 12px 14px;
    }

    .remove-account-icon {
      width: 15px;
      margin-left: 10px;
      height: 15px;
    }

    &:hover {
      .remove-account-icon::after {
        content: '\00D7';
        font-size: 25px;
        color: var(--white);
        cursor: pointer;
        position: absolute;
        margin-top: -5px;
      }
    }
  }

  &__account-info {
    flex: 1 0 auto;
    display: flex;
    flex-flow: column nowrap;
  }

  &__check-mark {
    width: 14px;
    margin-right: 12px;
    flex: 0 0 auto;
  }

  &__check-mark-icon {
    background-image: url("/images/check-white.svg");
    height: 18px;
    width: 18px;
    background-repeat: no-repeat;
    background-position: center;
    background-size: contain;
    margin: 3px 0;
  }

  .identicon {
    margin: 0 12px 0 0;
    flex: 0 0 auto;
  }

  &__name {
    @include H4;

    color: var(--white);
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    max-width: 200px;
  }

  &__balance {
    @include H6;

    color: var(--dusty-gray);
  }

  &__action {
    @include Paragraph;

    cursor: pointer;
  }

  &__scroll-button {
    position: absolute;
    bottom: 12px;
    right: 12px;
    height: 28px;
    width: 28px;
    border-radius: 14px;
    background: #3f3f3f;
    z-index: 201;
    cursor: pointer;
    opacity: 0.8;
    display: flex;
    justify-content: center;
    align-items: center;

    &:hover {
      opacity: 1;
    }
  }

  &__icon-list {
    display: flex;
  }
}

